Fix Overflow colección

--- a/css/styles-coleccion.css
+++ b/css/styles-coleccion.css
@@ -48,6 +48,8 @@ iframe{
       gap: 3%;
       grid-template-columns: repeat(auto-fill, minmax(17rem, 2fr)); 
       padding: 2% 2% 10% 2%;
+      overflow: scroll;
+      scrollbar-width: none;
     }
   .body-coleccion  section{
         background-color: #dedede;
